--- a/home/techguides/clone-environment.html
+++ b/home/techguides/clone-environment.html
@@ -112,15 +112,12 @@
 <li>At this point, there will be created: a New address and a GitHub endpoint with the same content as the cloned one and also a cloned Database (the export of the database is triggered).</li>
 <li>The new (clone-environment) will have the same template as the source environment.</li>
 <li>In the Event Tab of the source Environment (the one being cloned), the Event notifications will display the date, time and duration of the Cloning action.</li>
-<li>The <strong>Clone</strong> button will be disabled until on the left side of the screen you will notice the new cloned environment being created.</li>
-</ul>
-<p><br></p>
-<ul>
+<li>The <strong>Clone</strong> button will be disabled until on the left side of the screen you will notice the new cloned environment being created.<ul>
 <li>The new environment will be visible in the Environments list with the status <strong>Creating</strong>:</li>
 </ul>
+</li>
+</ul>
 <p><img src="images/clone-refresh.png" alt=""> </p>
-<p><br></p>
-<p><img src="images/clone-env-creating.png" alt=""> </p>
 <ul>
 <li>The target environment (clone) will display the status <strong>Creating</strong> for:<ul>
 <li>T24 application</li>
