--- a/home/techguides/create-publish-template.html
+++ b/home/techguides/create-publish-template.html
@@ -164,7 +164,20 @@
 <p>Expand the left side menu and click on &#39;Environments&#39;. You will see the enviroment that was created following the successful factory run:</p>
 <p><img src="images/factory-run-environment.png" alt=""></p>
 <h1 id="create-and-publish-the-new-template-after-the-successful-factory-run">Create and Publish the New Template after the Successful Factory Run</h1>
-<p>Click on the newly created environment. On the right side of the page click on &#39;Save as a new template&#39;. Type in the Template Name and a brief description. </p>
+<p>There are two alternatives to Create and Publish the new Template after the Successful Run:</p>
+<ol>
+<li>Automated trigger </li>
+<li>save the New Template from the Factory Run </li>
+<li>go to Dashboard</li>
+<li>on the Factory Run click on &#39;Actions&#39; and select from the drop-down &#39;Create New Template</li>
+</ol>
+<p><img src="./images/run-factory-completed.png" alt=""></p>
+<ol>
+<li>Manual trigger </li>
+<li>click on the newly created environment</li>
+<li>on the right side of the page click on &#39;Save as a new template&#39;</li>
+<li>type in the Template Name and a brief description </li>
+</ol>
 <p><img src="images/save-new-template.png" alt=""></p>
 <p>To see the new template, go to the Templates Catalogue tab. Your template is now available in your templates list.</p>
 <p><img src="images/new-template.png" alt=""></p>
