--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -126,8 +126,6 @@ An organization can define as many components as needed but should have all mand
 </ul>
 <p>See below example:</p>
 <p><img src="images/products-add-component.png" alt=""></p>
-<p>After creating it, under Component Details you will notice a link of this type: </p>
-<p><span style="color:DarkSlateBlue"><strong>Upload URL: <a href="http://platformdevartifactory.dev.temenos.cloud:8081/artifactory/stable_dev/Dev/Stable_Dev/T24_Browse">http://platformdevartifactory.dev.temenos.cloud:8081/artifactory/stable_dev/Dev/Stable_Dev/T24_Browse</a></strong></span></p>
 <p>A folder is automatically created into the repository <em>(we are using JFrog Artifactory)</em> with the name of your component and will be always created under the default <strong>stable_dev</strong> stage. This is the path where the components&#39; files should be uploaded as explained on the next steps:</p>
 <p><em>(Please note that the components&#39; artifacts can be uploaded any time before running a factory).</em></p>
 <p><em>(If the related artifacts are not uploaded, running the factory will not be possible and an error message will be thrown).</em></p>
@@ -194,6 +192,9 @@ Also the binaries/ artifacts have to be uploaded each time a component is update
 </ul>
 <div class="NOTE"><h5>Note</h5><p>If the respective product is attached to a factory, you will not be able to delete. You need to delete the factory first.</p>
 </div>
+<h1 id="artifactory-view">Artifactory view</h1>
+<p>The artifactory view displays the uploaded components that are available for the particular stages. By expanding the components, the user triggers a download of the respective component zip file.</p>
+<p><img src="images/artifactory_view.png" alt=""></p>
 <p><br></p>
               <hr>
               
