--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -141,6 +141,18 @@ See further below how to generate the SSH key</p>
 <li><p>For further details or issues related to Gitlab SSH keys usage, or other operating systems (MAC, Linux), please consult this link:  <a href="https://help.github.com/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent/">https://help.github.com/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent/</a></p>
 </li>
 </ul>
+<h1 id="user-roles-management">User Roles Management</h1>
+<p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).
+The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user:</p>
+<p>To create a role, the admin will click on &#39;New Role&#39; and fill in the blanks:</p>
+<p>The admin can select which permissions to set to each user.</p>
+<p>Once the role is created, the admin can assign it to a specific user:</p>
+<ul>
+<li>go to the &#39;Users&#39; tab and select the user </li>
+<li>choose from the drop-down list the user </li>
+<li>click &#39;Edit&#39; on the user</li>
+<li>choose from the drop-down list the role that needs to be assigned </li>
+</ul>
 <p><br></p>
               <hr>
               
