--- a/home/techguides/access-ud-directories.html
+++ b/home/techguides/access-ud-directories.html
@@ -209,6 +209,8 @@ server.log - shows the Jboss application log (standalone folder appeas only for 
 </ul>
 <div class="NOTE"><h5>Note</h5><p>Make sure you place the files in the appropriate folder belonging to the specific application that you want to use</p>
 </div>
+<h2 id="des---data-event-streaming">DES - Data Event Streaming</h2>
+<p>Please follow the instructions from this <a href="http://gva2flare.temenosgroup.com/R19ID/R19ID.htm#../Subsystems/R19TechUG/Content/Integration%20Framework/User%20Guides/DataEventStreaming201902/Data%20Event%20Streaming.htm%3FTocPath%3DUser%2520Guides%7CEnterprise%2520Frameworks%7CIntegration%2520Framework%7CData%2520Event%2520Streaming%7C_____0">link</a> to learn how to access the events.</p>
 <p><br></p>
               <hr>
               
