--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -176,7 +176,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <img src="images/components-products-mobaxterm.png" alt=""></p>
 <p>Once the command is run, the binary is uploaded on the Artifactory:
 <img src="images/components-products-uploaded-binary.png" alt=""></p>
-<p><strong>Pre-requisites and best practices</strong></p>
+<p><strong>Pre-requisites and best practices:</strong></p>
 <ul>
 <li>ensure that the component name also has information about its version;</li>
 <li>ensure that the component format that you upload is correct and as delivered by the Temenos team;</li>
