--- a/home/techguides/stream.html
+++ b/home/techguides/stream.html
@@ -124,7 +124,7 @@ The parts of the stream are listed below:</p>
 <p><img src="./images/streams-edited.png" alt=""></p>
 <h2 id="clone-a-stream">Clone a Stream</h2>
 <p>You can clone a stream as well. This action will copy the latest version of all components in the default stage to the new stream. When cloning the stream, you can add a stream name, stream description and enable/disable it.</p>
-<p><img src="./images/streams-cloned.png" alt=""></p>
+<p><img src="images/streams-cloned.png" alt=""> </p>
 <h2 id="delete-a-stream">Delete a Stream</h2>
 <div class="NOTE"><h5>Note</h5><p><span style="color:red">In order to delete a stream, you need to delete first all the subsequent features created. See example and explanations below.</span></p>
 </div>
