--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -97,7 +97,7 @@
 </ul>
 <p><img src="images/stop-all-user-env.png" alt="start"> <strong>Stop All User Environments</strong> button:</p>
 <ul>
-<li>Use this button to only stop all user environments. Not that this action will not stop factory environments.</li>
+<li>Stops all running VMs that are part of the Environment..</li>
 </ul>
 <p><img src="images/button-refresh.png" alt="start"> <strong>Refreshing</strong> the page:</p>
 <ul>
@@ -121,7 +121,7 @@
 <p><br></p>
 <p><img src="images/button-delete.png" alt="delete"> <strong>Deleting</strong> and environment:</p>
 <ul>
-<li>Stops all instances of an Application in the Environment, removes all resources including configuration repository.</li>
+<li>Removes all resources including VMs and configuration repository that are part of an Environment.</li>
 </ul>
 <h2 id="t24-release-section---available-actions">T24 Release section - available actions:</h2>
 <h3 id="span-stylecolororangefont-weight1000endpointsspan"><span style="color:orange;font-weight:1000;"><strong>Endpoints</strong>:</span></h3>
