--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -97,7 +97,7 @@
 </ul>
 <p><img src="images/stop-all-user-env.png" alt="start"> <strong>Stop All User Environments</strong> button:</p>
 <ul>
-<li>Stops all running VMs that are part of the Environment..</li>
+<li>Stops all running VMs that are part of the Environment.</li>
 </ul>
 <p><img src="images/button-refresh.png" alt="start"> <strong>Refreshing</strong> the page:</p>
 <ul>
