--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -151,7 +151,7 @@
 <p><br></p>
 <p><img src="images/button-stop.png" alt="stop"> <strong>Stopping</strong>  an environment:</p>
 <ul>
-<li>Stops all running instances of an Application in an Environment.</li>
+<li>Stops all running VMs that are part of the Environment.</li>
 </ul>
 <p><br></p>
 <p><img src="images/button-rebuild.png" alt="rebuild"> <strong>Rebuilding</strong> an environment:</p>
