--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -129,7 +129,8 @@ An organization can define as many components as needed but should have all mand
 <p>A folder is automatically created into the repository <em>(we are using JFrog Artifactory)</em> with the name of your component and will be always created under the default <strong>stable_dev</strong> stage. This is the path where the components&#39; files should be uploaded as explained on the next steps.</p>
 <p><em>(Please note that the components&#39; artifacts can be uploaded any time before running a factory).</em></p>
 <p><em>(If the related artifacts are not uploaded, running the factory will not be possible and an error message will be thrown).</em></p>
-<h3 id="how-to-log-in-to-the-artifactory-server">How to log in to the Artifactory Server</h3>
+<h2 id="how-to-upload-binaries-into-the-artifactory">How to upload binaries into the Artifactory</h2>
+<h3 id="how-to-upload-binaries-into-the-artifactory">How to upload binaries into the Artifactory</h3>
 <p>Every user created in the Temenos Continuous Deployment Platform can log in with the platform’s credential on the Artifactory server as well. The users are enabled to download the existing artifacts or upload new artifacts that will be used for factories. This process can be done in two ways:</p>
 <p><strong>A. Manually access the artifactory and upload the required binary (recommended).</strong></p>
 <ul>
@@ -197,7 +198,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <li>For all added components, make sure you add the related files archive into the artifactory as explained above.</li>
 </ul>
 <p><img src="images/products-templates.png" alt=""></p>
-<h3 id="delete-a-component">Delete a Component</h3>
+<h3 id="how-to-delete-a-component">How to Delete a Component</h3>
 <p>Components fields are not editable, so you have only the options to create or to delete them.</p>
 <div class="NOTE"><h5>Note</h5><p><span style="color:red">If your component is <strong>attached to a Product</strong>, you will not be able to delete it. <p>
 <p>You need first to delete the product, then return to the component and click <strong>Delete</strong> button.</span></p>
@@ -215,7 +216,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 </ul>
 <p>Ultimately, a product is used in a factory and will be used eventually to deploy the required components.</p>
 <h2 id="how-to-set-up-edit-delete-products">How to Set Up/ Edit/ Delete Products</h2>
-<h3 id="set-up-create-a-product">Set-up/ Create a Product</h3>
+<h3 id="how-to-set-up-create-a-product">How to Set-up/ Create a Product</h3>
 <ul>
 <li>If you have created more streams, first make sure you select the stream where you want to create the respective product (see top right).</li>
 <li>Click on Products tab and then on New Product button on the top right.</li>
@@ -226,14 +227,14 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <p><em>For components, the selection order is not important.</em></p>
 <p><img src="images/products-add-product.png" alt=""></p>
 <p>In addition to the principle product which has all template mandatory components, you will need to create other products - Base Products - that will be used to be tested.</p>
-<h3 id="edit-a-product">Edit a Product</h3>
+<h3 id="how-to-edit-a-product">How to edit a product</h3>
 <p>You can edit:</p>
 <ul>
 <li>The product description. </li>
 <li>The components field by adding or removing components.</li>
 <li>Just click the edit button, do the changes and then click update.</li>
 </ul>
-<h3 id="delete-a-product">Delete a Product</h3>
+<h3 id="how-to-delete-a-product">How to delete a product</h3>
 <ul>
 <li>Go to the Products tab and select the product you want to delete.</li>
 <li>Click the delete button.</li>
